--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch css/style.scss css/style.css"
+    "sass": "sass --watch sass/style.scss css/style.css"
   },
   "author": "",
   "license": "ISC",
